syntax = "proto3";
option java_multiple_files = true;
package ds.cw2.communication.grpc.generated;


message StockOrderRequest {
    string traderId = 1;
    string symbol = 4;
    int32 quantity = 10;
    double price = 100;
    string orderType = 2;
    bool isSentByPrimary = 3;
}

message StockOrderResponse {
    string traderId = 123;
    string symbol = 4;
    int32 quantity = 10;
    double price = 100;
    string orderType = 2;
    bool status = 1;
}

service StockOrderService {
    rpc stockOrder(StockOrderRequest) returns (StockOrderResponse);
}